[package]
name = "repro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "=0.8.19" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "MediaQueryList"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["dep:axum", "dep:tokio", "dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[package.metadata.leptos]
output-name = "repro"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3111"
reload-port = 3112
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
